<resources>
    <string name="app_name">Cookidoo</string>
    <string name="Strona_główna">Strona główna</string>
    <string name="Szukaj">Szukaj</string>
    <string name="Zakładki">Zakładki</string>
    <string name="Mój_tydzień">Mój tydzień</string>
    <string name="Listazakupów">Lista zakupów</string>
    <string name="AddRecipe">Dodaj przepis</string>
    <string name="title_activity_recipe_list">RecipeListActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_recipe">Recipes!</string>
</resources>